# Projects

./: FCWindow.hpp  FCWindowAxis.cpp  FCWindowColor.hpp  FCWindowManager.hpp  WeatherItemConfigurator.hpp  main.cpp
BPMDetector/: globals.hpp  main  main.cpp  makefile
BPMDetector/Audio/: ALSACardConfiguration.hpp  ALSACardConfigurator.cpp  ALSACardConfigurator.hpp  ALSACardFilter.hpp  ALSACardInfo.hpp  ALSACardInfoGetter.cpp  ALSACardInfoGetter.hpp  ALSACardLister.cpp  ALSACardLister.hpp  ALSACardManager.cpp  ALSACardManager.hpp  ALSARecorder.cpp  ALSARecorder.hpp  ALSARecordingService.cpp  ALSARecordingService.hpp  AudioCardFilter.hpp  AudioCardLister.cpp  AudioCardLister.hpp  AudioCardManager.cpp  Buffer.hpp  (+12 more)
BPMDetector/Audio/TestAudio/: CMakeCache.txt  CMakeLists.txt  FakeAudioRecorder.cpp  FakeAudioRecorder.hpp  FakeCaptureService.cpp  FakeCaptureService.hpp  FakeCardConfigurator.cpp  FakeCardConfigurator.hpp  FakeCardInfoGetter.cpp  FakeCardInfoGetter.hpp  FakeRecordingService.cpp  FakeRecordingService.hpp  Makefile  SampleData.hpp  TestALSACardFilter.cpp  TestALSACardLister.cpp  TestALSACardManager.cpp  TestAudioCardFilter.cpp  TestAudioCardLister.cpp  TestAudioCardManager.cpp  TestAudioRecorder.cpp  TestBuffer.cpp  TestMain.cpp  TestWavFile.cpp  cmake_install.cmake  runTests
Weather_Display/: FCWindow.cpp  FCWindowAxis.hpp  FCWindowGraph.cpp  FCWindowGraph.hpp  FCWindowLabel.cpp  FCWindowLabel.hpp  FCWindowManager.cpp  JSONParser.hpp  URLModifier.hpp  WeatherCollector.hpp  WeatherItemConfigurator.cpp  WeatherItems.hpp  compile.sh  display  installed_libraries
(+3 files in other folders)
